added layout main image banner

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,20 +1,33 @@
 /*Universal styles*/
 body {
   font-family: Helvetica;
+  font-size: 18px;
 }
-
+h1 {
+  font-weight: bolder;
+  font-size: 3rem;
+  line-height: 1;
+  padding: 1em 0em 0.5em 0em;
+}
+h2 {
+  font-weight: lighter;
+  font-size: 1.5rem;
+  line-height: 1;
+  padding: 0em 0em 0.5em 0em;
+}
+ p {
+   font-weight: normal;
+   font-size: 1rem;
+   line-height: 1;
+   padding: 0em 0em 0.5em 0em;
+ }
 .flex {
   display: flex;
 }
 
 /*header and navigation*/
-header {
-  position: fixed;
-  z-index: 100;
-  width: 100%;
-  border-bottom: solid 1px #c6c1c1;
-  background-color: white;
-  margin: 0px;
+.moreweight {
+  font-weight: bold;
 }
 
 nav {
@@ -34,6 +47,7 @@ nav div {
 nav img {
   padding: 0px 0px 0px 24px;
 }
+
 ul li {
   display: inline;
 }
@@ -45,13 +59,24 @@ ul li {
 }
 /*Main-Banner*/
 
-.main-banner {
+.flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.flex img {
+.main-banner {
+  position: relative;
+  width: 40%;
+}
+ img {
   width: 60%;
-  padding: 32px 24px;
-
+  margin: 32px 24px;
+}
+.main-banner span {
+  background-color: grey;
+  color: white;
+  padding:8px 0px 8px 0px;
+  position: absolute;
+  text-align: center;
+  width: 15rem;
 }
