--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -61,6 +61,8 @@ ul li {
 
 .container1 {
   display: flex;
+  height: 816px;
+
 
 
 }
@@ -69,33 +71,40 @@ ul li {
 }
 
 .item2 {
-flex: 1;
+display: flex;
 flex-direction: column;
+margin: auto;
+
+
 }
 
 .item2-a {
-flex: 1;
+
+
+
 }
 
 .item2-b {
-flex: 1;
+
+
 }
 
 .item2-c {
-flex: 1;
+text-align: center;
+
 }
 
- img  .item1 {
-  width: : 60%;
-  margin: 32px 24px;
+ .item1 img {
+width: 100%;
+padding: 32px 24px;
+
+
 }
 
 
-/*.item4.button {
+.item2-c  {
   background-color: grey;
   color: white;
   padding:8px 0px;
-  position: absolute;
-  text-align: center;
-  width: 15rem;
-}*/
+  width: 24rem;
+}
