--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,9 +21,7 @@ h2 {
    line-height: 1;
    padding: 0em 0em 0.5em 0em;
  }
-.flex {
-  display: flex;
-}
+
 
 /*header and navigation*/
 .moreweight {
@@ -57,15 +55,13 @@ ul li {
 .main {
   padding: 0px 24px 0px 0px;
 }
-/*Main-Banner*/
-
+/*Main-content*/
+/*container1*/
 .container1 {
   display: flex;
-  height: 816px;
-
-
-
+  background-color: #C0C0C0;
 }
+
 .item1 {
   width: 60%;
 }
@@ -74,37 +70,114 @@ ul li {
 display: flex;
 flex-direction: column;
 margin: auto;
-
-
+justify-content: center;
 }
 
 .item2-a {
-
-
-
 }
 
 .item2-b {
-
-
 }
 
 .item2-c {
 text-align: center;
-
+background-color: 3B3B3B;
+color: white;
+padding:8px 0px;
+width: 24rem;
 }
-
  .item1 img {
 width: 100%;
 padding: 32px 24px;
+}
+
+ /*container2*/
+
+.container2 {
+  display: flex;
+
+}
+.item2-1 {
+  width: 60%;
+}
+
+.item2-1 img {
+  width: 100%;
+  margin: 32px 24px;
+}
+
+.item2-1 h2 , p {
+  width: 100%;
+  padding: 0px 24px;
+  margin: 0px;
+}
+.item2-2 {
+
+}
+
+.item2-2 img {
+  width: 30%;
+  height: auto;
+}
+item2-2-a {
 
 
 }
 
+.item2-4 {
 
-.item2-c  {
-  background-color: grey;
-  color: white;
-  padding:8px 0px;
-  width: 24rem;
+}
+
+
+/*Responsive-design*/
+
+/*Navigation*/
+
+@media only screen and (min-width: 780px) {
+.mobile {
+  display: none;
+ }
+}
+
+@media only screen and (max-width: 780px) {
+ .main {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 570px) {
+  .main  {
+    display: none;
+  }
+
+  nav {
+    height: 64px;
+    display: flex;
+  }
+  .mobile ul li {
+    justify-content: space-around;
+  }
+  .mobile img {
+
+
+}
+
+  .academy-title
+  {
+    display: none;
+  }
+
+  .container1 {
+    flex-wrap: wrap;
+  }
+  .item1 {
+    width: auto;
+
+  }
+  .item1 img {
+     padding:  0px 0px 0px 0px;
+   }
+
+
+
 }
