--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,7 +10,7 @@ h1 {
   padding: 1em 0em 0.5em 0em;
 }
 h2 {
-  font-weight: lighter;
+  font-weight: bold;
   font-size: 1.5rem;
   line-height: 1;
   padding: 0em 0em 0.5em 0em;
@@ -95,30 +95,31 @@ padding: 32px 24px;
 
 .container2 {
   display: flex;
+  margin: 32px 24px;
 
 }
 .item2-1 {
   width: 60%;
+  padding: 16px 24px 0px 0px;
 }
 
 .item2-1 img {
   width: 100%;
-  margin: 32px 24px;
 }
 
-.item2-1 h2 , p {
-  width: 100%;
-  padding: 0px 24px;
-  margin: 0px;
+.item2-1 h1 {
+  padding: 32px 0px 24px 0px;
 }
 
 .item2-2 {
   width: 40%;
+
 }
 
 .item2-2 img {
   width: 35%;
   height: auto;
+  padding: 16px 16px;
 }
 
 .item2-2-a {
@@ -129,6 +130,7 @@ padding: 32px 24px;
 .item2-3-b {
   display: flex;
   align-items: center;
+  padding: 16px 0px;
 }
 
 .item2-4-c {
@@ -138,6 +140,7 @@ padding: 32px 24px;
 
 .item-description {
 flex-direction: column;
+padding: 8px 0px;
 }
 
 /*Responsive-design*/
@@ -148,30 +151,41 @@ flex-direction: column;
 .mobile {
   display: none;
  }
+
+ .mobile-container2{
+   display: none;
+ }
 }
 
 @media only screen and (max-width: 780px) {
  .main {
     display: none;
   }
+
+  .container2 {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 570px) {
-  .main  {
+nav {
+    height: 64px;
     display: none;
   }
 
-  nav {
-    height: 64px;
+nav.mobile  {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
-  .mobile ul li {
-    justify-content: space-around;
+
+.main  {
+    display: none;
   }
-  .mobile img {
 
-
-}
+.item2-1{
+    display: none;
+  }
 
   .academy-title
   {
@@ -180,15 +194,35 @@ flex-direction: column;
 
   .container1 {
     flex-wrap: wrap;
+    padding: 0px 0px 32px 0px;
   }
   .item1 {
-    width: auto;
+    width: 100%;
 
   }
   .item1 img {
      padding:  0px 0px 0px 0px;
    }
+.item2{
+  padding: 16px;
+}
+   .item2-2 {
+     width: 100%;
+     padding: 16px;
+   }
 
+.mobile-container2{
+  padding: 16px;
+}
 
+.mobile-item-description {
+  padding: 0px 0px 0px 16px;
+  margin: 32px 0;
+}
+
+.mobile-container2 img {
+     width: 100%;
+     p
+   }
 
 }
