--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,19 +1,20 @@
 /*Universal styles*/
-body {
+html {
   font-family: Helvetica;
-  font-size: 18px;
+  font-size: 16px;
+  color: #424242
 }
 h1 {
-  font-weight: bolder;
-  font-size: 3rem;
+  font-weight: 700;
+  font-size: 2rem;
   line-height: 1;
-  padding: 1em 0em 0.5em 0em;
+
 }
 h2 {
-  font-weight: bold;
-  font-size: 1.5rem;
+  font-weight: 500;
+  font-size: 1.25rem;
   line-height: 1;
-  padding: 0em 0em 0.5em 0em;
+  padding: 1em 0em 2em 0em;
 }
  p {
    font-weight: normal;
@@ -55,41 +56,46 @@ ul li {
 .main {
   padding: 0px 24px 0px 0px;
 }
-/*Main-content*/
+/*main-container*/
+
+.main-container {
+  max-width: 1280px;
+  margin: auto;
+}
+
 /*container1*/
 .container1 {
   display: flex;
+  align-items: center;
   background-color: #C0C0C0;
 }
 
 .item1 {
-  width: 60%;
+  width: 55%;
+  padding: 2rem;
+}
+
+.item1 img {
+width: 100%;
+height: auto;
 }
 
 .item2 {
-display: flex;
-flex-direction: column;
-margin: auto;
-justify-content: center;
+
+padding-left: 1rem;
+max-width: 25%;
 }
 
-.item2-a {
-}
-
-.item2-b {
-}
-
-.item2-c {
+button {
 text-align: center;
 background-color: 3B3B3B;
 color: white;
-padding:8px 0px;
-width: 24rem;
-}
- .item1 img {
+padding:1rem;
 width: 100%;
-padding: 32px 24px;
+border: none;
+text-transform: uppercase;
 }
+
 
  /*container2*/
 
@@ -166,10 +172,29 @@ padding: 8px 0px;
     display: none;
   }
 }
+/*Tablet*/
 
+@media only screen and (max-width: 820px) {
+  .mobile {
+    display: none;
+   }
+
+}
+/*Mobile*/
 @media only screen and (max-width: 570px) {
+  h2 {
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 1;
+    padding: 0 0 0.5rem 0;
+  }
+  p {
+    font-size: 0.8rem;
+    padding: 0 0 0.5rem 0;
+  }
+
 nav {
-    height: 64px;
+    height: 4rem;
     display: none;
   }
 
@@ -183,46 +208,51 @@ nav.mobile  {
     display: none;
   }
 
-.item2-1{
-    display: none;
-  }
-
   .academy-title
   {
     display: none;
   }
+/*--container1--*/
 
-  .container1 {
-    flex-wrap: wrap;
-    padding: 0px 0px 32px 0px;
+.container1 {
+    flex-direction: column;
+    max-width: 100%;
   }
-  .item1 {
-    width: 100%;
 
-  }
-  .item1 img {
-     padding:  0px 0px 0px 0px;
-   }
-.item2{
-  padding: 16px;
+.item1 img {
+  max-width: 100%;
+  padding: 0;
 }
-   .item2-2 {
+
+.item2{
+  max-width: 100%;
+  padding: 2rem 1rem;
+}
+
+/*--container2--*/
+
+.item2-1{
+    display: none;
+  }
+
+.item2-2 {
      width: 100%;
-     padding: 16px;
+     padding: 1rem;
    }
 
 .mobile-container2{
-  padding: 16px;
+  padding: 1rem;
 }
 
 .mobile-item-description {
-  padding: 0px 0px 0px 16px;
-  margin: 32px 0;
+  padding: 0rem 0rem 0rem 1rem;
+  margin: 1rem 0;
+  border-bottom: 1px solid;
 }
 
 .mobile-container2 img {
      width: 100%;
-     p
+
    }
 
 }
