--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,26 +1,30 @@
 /*Universal styles*/
 html {
-  font-family: Helvetica;
+  font-family: 'Raleway', sans-serif;
   font-size: 16px;
   color: #424242
 }
 h1 {
-  font-weight: 700;
+  font-family: 'Quicksand', sans-serif;
   font-size: 2rem;
-  line-height: 1;
+  font-weight: 800;
+  line-height: 1.5;
+
 
 }
 h2 {
-  font-weight: 500;
-  font-size: 1.25rem;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 600;
+  font-size: 1.5rem;
   line-height: 1;
   padding: 1em 0em 1em 0em;
 }
  p {
+  font-family: 'Raleway', sans-serif;
    font-weight: normal;
    font-size: 1rem;
-   line-height: 1;
-   padding: 0em 0em 0.5em 0em;
+   line-height: 1.5;
+   padding: 0.5em 0em 0.5em 0em;
  }
 
 
@@ -386,10 +390,10 @@ h1 {
   padding: 0;
   text-transform: full-width;
 }
-   .courses {
+.courses {
      background-color: white;
    }
-   .course-heading {
+.course-heading {
      padding: 0;
    }
    .course-list {
