--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,6 +9,8 @@ h1 {
   font-size: 2rem;
   font-weight: 800;
   line-height: 1.5;
+  padding: 0rem;
+
 
 
 }
@@ -70,6 +72,11 @@ nav div {
 nav div {
   height: 32px;
 }
+
+.mobile  {
+  display: none;
+}
+
 .academy-title {
   font-size: 1.75rem;
   font-family: 'Quicksand', sans-serif;
@@ -225,6 +232,10 @@ flex-direction: column;
 padding: 8px 0px;
 }
 
+.mobile-container2 {
+  display: none;
+}
+
 /*container3*/
 
 .courses {
@@ -265,6 +276,11 @@ padding-bottom: 2rem;
   text-transform: uppercase;
   padding: 0 0 1rem 0;
 }
+
+.mobile-course-section{
+  display: none;
+}
+
 /*mobile-container3*/
 .mobile-course-items {
  background-color: #3B3B3B;
@@ -272,7 +288,7 @@ padding-bottom: 2rem;
  border-radius: 2px;
  border-style: dotted;
  margin: 1rem 1rem 0.5rem 1rem;
- padding: 2rem 1rem;
+ padding: 1rem 1rem;
  align-items: center;
 }
 
@@ -373,54 +389,16 @@ footer a:active {
  }
 /*Responsive-design*/
 
-/*Navigation*/
-
-@media only screen and (min-width: 780px) {
-.mobile {
-  display: none;
- }
-
- .mobile-container2{
-   display: none;
- }
- .mobile-course-section {
-   display: none;
- }
-}
-
-@media only screen and (max-width: 780px) {
-
-  .container2 {
-    display: none;
-  }
-.course-items {
-  width: auto;
-  height: auto;
-  }
-}
-
-/*Tablet*/
-
-@media only screen and (max-width: 820px) {
-  .mobile {
-    display: none;
-   }
-
-
-}
+/*tablet*/
 /*Mobile*/
-@media only screen and (max-width: 570px) {
-
-  h1 {
-    padding: none;
-  }
+@media only screen and (max-width: 600px) {
 
   h2 {
     font-size: 1.5rem;
     font-weight: 700;
     line-height: 1.2;
-    padding: 2rem 0rem;
-  }
+    }
+
   p {
     font-size: 0.8rem;
     padding: 0 0 0.5rem 0;
@@ -457,11 +435,17 @@ nav.mobile  {
 .item2{
   max-width: 100%;
   padding: 2rem 1rem;
+  margin: 2rem 2rem;
+}
+
+button {
+  max-width: 60%;
+
 }
 
 /*--container2--*/
 
-.item2-1{
+.container2{
     display: none;
   }
 
@@ -471,13 +455,16 @@ nav.mobile  {
    }
 
 .mobile-container2{
-  padding: 1rem;
+  /*padding: 1rem;*/
+    display: block;
+    max-width: 100%;
+    margin-bottom: 1rem;
 }
 
 .mobile-item-description {
   padding: 0rem 0rem 0rem 1rem;
   margin: 1rem 0;
-  border-bottom: 1px solid;
+
 }
 
 .mobile-container2 img {
@@ -486,39 +473,26 @@ nav.mobile  {
 
    /*--container3--*/
 
-h1 {
-     padding-bottom: 1rem;
-   }
+.course-list {
+  display: none;
+  }
 
-   .course-items img {
-     display: none;
-   }
+.mobile-course-section {
+  display: block;
+  }
 
-   .course-description {
-     display: none;
-   }
-
-.mobile-course-items h2 {
-  padding: 0;
-  text-transform: full-width;
-}
 .courses {
      background-color: white;
    }
-.course-heading {
-     padding: 0;
-   }
-   .course-list {
-     display: none;
-   }
+
 .video-description {
   display: none;
-}
+  }
 
 .feature {
   display: none;
-}
+  }
 .item-video {
   max-width: 100%;
-}
+  }
 }
