--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -390,6 +390,40 @@ footer a:active {
 /*Responsive-design*/
 
 /*tablet*/
+@media only screen and (max-width: 820px) {
+  h1 {
+    font-size: 1.7rem;
+  }
+
+
+  h2 {
+    font-size: 1.5rem;
+    font-weight: 800;
+    line-height: 1.5;
+    padding: 0rem;
+  }
+
+  h2 {
+    font-weight: 600;
+    font-size: 1rem;
+    line-height: 1;
+    padding: 0.5em 0em 0.5em 0em;
+  }
+  p {
+    font-weight: normal;
+    font-size: 1rem;
+    line-height: 1;
+    padding: 0.5em 0em 0.5em 0em;
+  }
+  .course-items {
+    max-width: 25%;
+  }
+
+  button {
+    margin-top: 1rem;
+  }
+}
+
 /*Mobile*/
 @media only screen and (max-width: 600px) {
 
@@ -400,7 +434,7 @@ footer a:active {
     }
 
   p {
-    font-size: 0.8rem;
+    font-size: 1rem;
     padding: 0 0 0.5rem 0;
   }
 
@@ -431,16 +465,18 @@ nav.mobile  {
     flex-direction: column;
     max-width: 100%;
   }
+.item1 {
+  width: 100%;
+  padding: 0rem;
+}
 
 .item2{
   max-width: 100%;
   padding: 2rem 1rem;
-  margin: 2rem 2rem;
 }
 
 button {
-  max-width: 60%;
-
+  margin-top: 1rem;
 }
 
 /*--container2--*/
@@ -459,6 +495,7 @@ button {
     display: block;
     max-width: 100%;
     margin-bottom: 1rem;
+    margin-top: 2rem;
 }
 
 .mobile-item-description {
@@ -481,6 +518,10 @@ button {
   display: block;
   }
 
+.course-heading{
+  padding: 0rem 1.5rem;
+}
+
 .courses {
      background-color: white;
    }
@@ -492,7 +533,16 @@ button {
 .feature {
   display: none;
   }
-.item-video {
-  max-width: 100%;
+
+  .thesis-header {
+    padding: 1rem 0rem;
   }
+.item-video {
+  width: 100%;
+  padding-right: 0rem;
+  margin-bottom: 1rem;
+  }
+.footer-links {
+  display: none;
+}
 }
