--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -261,7 +261,13 @@ padding-bottom: 2rem;
   max-width: 30%;
   margin: 1rem;
   background-color: white;
-  box-shadow: 5px 10px 18px #3B3B3B;
+  box-shadow: 5px 10px 18px #8787A7;
+  transition: box-shadow .5s;
+  }
+
+  .course-items:hover {
+    box-shadow: 5px 10px 18px #3B3B3B;
+    cursor: pointer;
   }
 
   .course-items img {
@@ -440,6 +446,7 @@ footer a:active {
 
 nav {
     height: 4rem;
+    margin: 0rem 1rem;
     display: none;
   }
 
