--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -254,7 +254,7 @@ display: flex;
 justify-content: center;
 flex-wrap: wrap;
 padding-bottom: 2rem;
-
+margin: 0rem 2rem;
 }
 
 .course-items {
@@ -278,10 +278,12 @@ padding-bottom: 2rem;
   padding: 0rem 1rem 1rem 1rem;
 }
 
+.course-description h2{
+  padding: 0.5em 0em 0.5em 0em;
+}
 .course-description h3 {
   text-transform: uppercase;
-  padding: 0 0 1rem 0;
-}
+  }
 
 .mobile-course-section{
   display: none;
@@ -399,27 +401,40 @@ footer a:active {
 @media only screen and (max-width: 820px) {
   h1 {
     font-size: 1.7rem;
+    font-weight: 800;
+    line-height: 1.2;
   }
 
 
   h2 {
     font-size: 1.5rem;
-    font-weight: 800;
-    line-height: 1.5;
+    font-weight: 700;
+    line-height: 1.2;
     padding: 0rem;
   }
 
   h2 {
     font-weight: 600;
-    font-size: 1rem;
+    font-size: 1.1rem;
     line-height: 1;
-    padding: 0.5em 0em 0.5em 0em;
+    padding: 0.5rem 0rem 0.5rem 0rem;
+  }
+
+  h3 {
+    font-weight: 400;
+    font-size: 0.8rem;
+    line-height: 1;
+
   }
   p {
     font-weight: normal;
-    font-size: 1rem;
+    font-size: 0.75rem;
     line-height: 1;
-    padding: 0.5em 0em 0.5em 0em;
+    padding: 0.5rem 0rem 0.5rem 0rem;
+  }
+
+  .course-list {
+    margin: 0;
   }
   .course-items {
     max-width: 25%;
@@ -432,11 +447,17 @@ footer a:active {
 
 /*Mobile*/
 @media only screen and (max-width: 600px) {
-
-  h2 {
+  h1 {
     font-size: 1.5rem;
     font-weight: 700;
     line-height: 1.2;
+    }
+  }
+
+  h2 {
+    font-size: 1.2rem;
+    font-weight: 600;
+    line-height: 1;
     }
 
   p {
